--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "MD5": "latest",
         "body-parser": "^1.19.0",
         "cookie-parser": "^1.4.4",
+        "cors": "^2.8.5",
         "express": "latest",
         "jsonwebtoken": "^8.5.1",
         "multer": "^1.4.2",
