--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
         "body-parser": "^1.19.0",
         "cookie-parser": "^1.4.4",
         "cors": "^2.8.5",
+        "crypto": "^1.0.1",
         "express": "latest",
         "jsonwebtoken": "^8.5.1",
+        "moment": "^2.24.0",
         "multer": "^1.4.2",
         "mysql": "^2.17.1"
     }
